--- a/src/components/Displayer/displayer.scss
+++ b/src/components/Displayer/displayer.scss
@@ -29,26 +29,24 @@
 
         .owner-photo {
             width: 120px;
-            height: 65%;
+            height: 55%;
             border: black 1px solid;
             margin-right: 20px;
-            z-index: 2000;
+            z-index: 1000;
             overflow: hidden;
         }
 
         .owner-info {
             width: 200px;
-            height: 65%;
-            // border: black 1px solid;
+            height: 55%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            z-index: 2000;
+            z-index: 1000;
 
             &>div {
                 display: flex;
                 align-items: center;
-                // border: black 1px solid;
 
                 .lable {
                     display: inline-flex;
@@ -56,38 +54,18 @@
                     white-space: nowrap;
                     flex-grow: 1;
                     width: 45%;
+                    font-weight: bold;
                 }
-
-                // &>span {
-                //     display: inline-flex;
-                //     width: 39%;
-                //     justify-content: space-between;
-                //     // border: black 1px solid;
-                //     white-space: nowrap;
-
-                // }
 
                 .ant-input {
                     flex-grow: 2;
                     padding: 4px 5px;
+                    font-weight: bold;
                 }
             }
 
         }
     }
-
-    .displayer-back {
-        width: 100%;
-        height: 100%;
-        border: black 1px solid;
-        border-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        overflow: hidden;
-    }
-
     .hint {
         z-index: -1;
         position: absolute;
